--- a/src/index.css
+++ b/src/index.css
@@ -106,7 +106,7 @@ body {
 
 @keyframes card-background-animetion {
     from {
-        transform: translate(-50%, -50%) skew(60deg);
+        transform: translate(-50%, -50%) skew(40deg);
     }
 
     to {
@@ -118,9 +118,9 @@ body {
     position: relative;
     display: flex;
     flex-direction: column;
-    width: 300px;
+    margin: 30px;
     z-index: 3;
-    
+    height: 400px;
 }
 
 
@@ -158,8 +158,16 @@ body {
     backdrop-filter: blur(0px);
     border-radius: 10px;
     transition: 0.3s;
+    animation: card-content-animetion 2s;
 }
-
+@keyframes card-content-animetion {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
 .card-content p {
     font-size: 20px;
     transition: 0.3s;
@@ -196,4 +204,12 @@ body {
 .Card:hover .cardReaction ,.Card:hover .Card-follow{
     left: -50px;
     opacity: 1;
+}
+.test {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap:40px;
+}
+.cardReaction:hover, .Card-follow:hover {
+    transform: scale(1.1);
 }
